# Kage

./: .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.txt  go.mod  main.go
cmd/: docs.json  root.go  util.go
src/: cli.rs  cmd.rs  core.rs  main.rs  util.rs
