[package]
name = "kage"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Kage"
keywords = []
categories = []
readme = "README.md"
description = ""
edition = "2024"


[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
chrono = "0.4"
dirs = "6"
regex = "1"
